[package]
name = "webrtc-util"
version = "0.8.1"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "Utilities for WebRTC.rs stack"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/webrtc-util"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/util"

[features]
default = ["buffer", "conn", "ifaces", "vnet", "marshal", "sync", "nix"]
buffer = []
conn = ["buffer", "sync"]
ifaces = []
vnet = ["ifaces"]
marshal = []
sync = []
xtensa = []

[dependencies]
tokio = { version = "1.32.0", default-features = false, features = ["rt", "macros", "net", "io-util"] }
lazy_static = "1"
async-trait = "0.1"
ipnet = "2.6.0"
log = "0.4"
rand = "0.8"
bytes = "1"
thiserror = "1"
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
esp-idf-svc = { version = "<=0.48.0", features = ["alloc", "binstart", "native", "experimental"] }
esp-idf-sys = { version = "<=0.34.0", features = ["binstart"] }
esp-idf-hal = { version = "=0.43.0", default-features = false }

[target.'cfg(all(not(windows), not(target_arch = "xtensa")))'.dependencies]
nix = { version = "0.26.2", optional = true }
libc = "0.2.126"

[target.'cfg(windows)'.dependencies]
bitflags = "1.3"
winapi = { version = "0.3.9", features = [
    "basetsd",
    "guiddef",
    "ws2def",
    "winerror",
    "ws2ipdef",
] }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"
chrono = "0.4.28"
criterion = { version = "0.5", features = ["async_futures"] }
async-global-executor = "2"

[[bench]]
name = "bench"
harness = false
